--- a/src/containers/header/index.scss
+++ b/src/containers/header/index.scss
@@ -1,7 +1,7 @@
 @import '../../stylesheets/_variables';
 
 .header {
-  margin-bottom: $large;
+  margin-bottom: $jumbo;
   padding: $base;
   background-color: $color-secondary;
   border-bottom: $tiny solid $color-primary;
